# circuitous

test/: CMakeLists.txt
test/verilog/: CMakeLists.txt  ciff-and-mttn-trace.sh  circuitous-test-harness.sh  from-mttn-trace.sh  run.sh
test/verilog/scripts/: ciff-and-mttn-trace.sh.in  circuitous-test-harness.sh  from-mttn-trace.sh.in
